@@ -13,6 +13,7 @@ Version 0.5
 - the :class:`Client` now supports cookies.
 - added the :mod:`~werkzeug.contrib.fixers` module with various
   fixes for webserver bugs and hosting setup side-effects.
+- added :mod:`werkzeug.contrib.wrappers`
 - added :func:`is_hop_by_hop_header`
 - added :func:`is_entity_header`
 - added :func:`remove_hop_by_hop_headers`
